--- a/components/organisms/Footer/Footer.module.scss
+++ b/components/organisms/Footer/Footer.module.scss
@@ -1,6 +1,8 @@
 .footer {
   background: var(--color-bg);
   margin-top: 64px;
+  margin-left: 280px;
+  width: calc(100% - 280px);
 }
 
 .partners {
