--- a/app/delivery/page.module.scss
+++ b/app/delivery/page.module.scss
@@ -32,3 +32,14 @@
   }
 }
 
+.link {
+  color: var(--color-primary-600);
+  text-decoration: none;
+  transition: color 0.2s;
+
+  &:hover {
+    color: var(--color-primary-700);
+    text-decoration: underline;
+  }
+}
+
