--- a/components/organisms/PageWrapper/PageWrapper.module.scss
+++ b/components/organisms/PageWrapper/PageWrapper.module.scss
@@ -1,9 +1,7 @@
 .pageWrapper {
+  flex: 1;
   min-height: calc(100vh - 200px);
-  width: calc(100% - 280px);
-  max-width: calc(100% - 280px);
   box-sizing: border-box;
-  margin-left: 280px;
   padding: 0;
   overflow-x: hidden;
   background: var(--color-bg);
