--- a/components/organisms/PageWrapper/PageWrapper.module.scss
+++ b/components/organisms/PageWrapper/PageWrapper.module.scss
@@ -2,9 +2,10 @@
   flex: 1;
   min-height: calc(100vh - 200px);
   box-sizing: border-box;
-  padding: 0;
+  padding: 32px 0;
   overflow-x: hidden;
   background: var(--color-bg);
   position: relative;
+  width: 100%;
 }
 
