--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -11,7 +11,7 @@
 
 .heroSection {
   background: transparent;
-  padding: 24px 0;
-  margin-bottom: 32px;
+  padding: 12px 0 0 12px;
+  margin-bottom: 0;
 }
 
